--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
