--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "nuxt-build": "nuxt build",
+    "nuxt-dev": "nuxt dev",
+    "nuxt-generate": "nuxt generate",
+    "nuxt-preview": "nuxt preview",
+    "nuxt-postinstall": "nuxt prepare"
   },
   "dependencies": {
     "vue": "^3.5.18",
+    "nuxt": "^4.0.3",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
