--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt-build": "nuxt build",
     "nuxt-dev": "nuxt dev",
     "nuxt-generate": "nuxt generate",
+    "nuxt-start": "node .output/server/index.mjs",
     "nuxt-preview": "nuxt preview",
     "nuxt-postinstall": "nuxt prepare"
   },
